--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,137 +1,189 @@
-name: Build
-on: pull_request
-
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18, 20]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: ESLint Checks
-        run: yarn validate:eslint
-  flow:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18, 20]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: Flow Checks
-        run: yarn validate:flow
-  tsc:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18, 20]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: TypeScript type check
-        run: yarn validate:typescript
   android:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11'
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: Build Android Example App and Library
+      run: cd example/android && ./gradlew clean assembleDebug
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version:
+        - 18
+        - 20
+  flow:
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: Build Android Example App and Library
-        run: cd example/android && ./gradlew clean assembleDebug
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: Flow Checks
+      run: yarn validate:flow
+    strategy:
+      matrix:
+        node-version:
+        - 18
+        - 20
   ios:
-    runs-on: macos-latest
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: Install Podfiles
+      run: cd example && npx pod-install
+    - continue-on-error: true
+      name: Build example app
+      run: yarn ios
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version:
+        - 18
+        - 20
+  lint:
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: Install Podfiles
-        run: cd example && npx pod-install
-      - name: Build example app
-        run: yarn ios
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: ESLint Checks
+      run: yarn validate:eslint
+    strategy:
+      matrix:
+        node-version:
+        - 18
+        - 20
   macos:
-    runs-on: macos-latest
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: Install Podfiles
+      run: cd example/macos && npx pod-install
+    - continue-on-error: true
+      name: Build example app
+      run: yarn macos
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version:
+        - 18
+        - 20
+  tsc:
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: Install Podfiles
-        run: cd example/macos && npx pod-install
-      - name: Build example app
-        run: yarn macos        
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      name: TypeScript type check
+      run: yarn validate:typescript
+    strategy:
+      matrix:
+        node-version:
+        - 18
+        - 20
+name: Build
+on:
+  repository_dispatch:
+    types: trigger-ga___ci.yml
