--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,39 @@
-name: Publish
-on:
-  push:
-    branches:
-      - 'master'
-
-
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - continue-on-error: true
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - continue-on-error: true
+      id: yarn-cache
+      name: Get yarn cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - continue-on-error: true
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        path: ${{ steps.yarn-cache.outputs.dir }}
+    - continue-on-error: true
+      name: Install Dependencies
+      run: yarn
+    - continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      name: Publish Package
+      run: yarn ci:publish
     strategy:
       matrix:
-        node-version: [18]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0        
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Install Dependencies
-        run: yarn
-      - name: Publish Package
-        run: yarn ci:publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        node-version:
+        - 18
+name: Publish
+on:
+  repository_dispatch:
+    types: trigger-ga___publish.yml
